Changes in source qmd documents for webpage rendering, added lexces logo.

--- a/R/Silicosis_diagnostic_rule.qmd
+++ b/R/Silicosis_diagnostic_rule.qmd
@@ -14,6 +14,10 @@ format:
     toc: true
     toc_float: true
     embed-resources: true
+    code-links:
+        - text: "GitHub"
+          href: https://github.com/UtrechtUniversity/lexces-silicosis-predict
+          icon: github
   pdf: 
     toc: true
     documentclass: scrartcl
